--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
+    "firebase": "^12.8.0",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
-    "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3"
   },
   "scripts": {
