--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "tradenest-server",
+  "name": "tradenest-backend",
   "version": "1.0.0",
   "description": "TradeNest Backend API - Online Rental & Trading Management System",
   "main": "server.js",
   "scripts": {
-    "start1": "node index.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "dev1": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
